fix tab separator and center urlbar text
tab separator is again not working in new version of firefox. The whole
transform css rule probably can be removed, but in case this value needs another
adjustment, this is still kept around.

urlbar text misalignment can be fixed based on comment from [here][1]

[1]: https://github.com/muckSponge/MaterialFox/issues/324#issuecomment-1193392615

--- a/chrome/tabbar/tabbar.css
+++ b/chrome/tabbar/tabbar.css
@@ -168,7 +168,7 @@
 	background-color: currentColor !important;
 	width: 1px !important;
 	height: 20px !important;
-	transform: translateY(10px) !important;
+	transform: translateY(0px) !important;
 	opacity: 0 !important;
 	transition: opacity .2s var(--ease-basic) !important;
 }
